# katz

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: pages.yml  regenerate-example-report.yml
docs/: index.html  investigated-review.html  review.html
examples/causal-curve-review/: human-triage-scenarios.json  joss-human-reviews.md
examples/causal-curve-review/.katz/: ACTIVE_VERSION
examples/causal-curve-review/.katz/spotters/: causal_language.md  overclaiming.md  software_claim_support.md  statistical_errors.md
scripts/: regenerate-example-report.sh
src/katz/: OVERVIEW.md  __init__.py  autokatz.py  cli.py  docs.py
src/katz/catalog/evals/: abstract_conveys_findings.md  abstract_states_novelty.md  broader_implications.md  contribution_clearly_stated.md  data_description.md  design_matches_claims.md  effect_sizes_reported.md  empirical_strategy.md  findings_clearly_presented.md  future_directions.md  gap_identified.md  intro_concrete_finding.md  intro_flow_caveats.md  intro_flow_contribution.md  intro_flow_main_findings.md  intro_flow_roadmap.md  intro_flow_so_what.md  intro_flow_topic_and_controversy.md  intro_flow_what_paper_does.md  intro_flow_why_it_matters.md  intro_length.md  intro_no_throat_clearing.md  (+12 more)
src/katz/docs_content/: cli-reference.md  edsl-codegen.md  edsl-jobs.md  getting-started.md  overview.md  workflow.md
src/katz/schemas/: action.schema.json  agent-status.schema.json  envelope.schema.json
src/katz/templates/: CLAUDE.md
tests/: test_agent_interface.py  test_cli.py  test_new_features.py  test_unit.py
(+36 files in other folders)
