[project]
name = "katz"
version = "0.2.0"
description = "Version-aware ledger for paper review artifacts"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "John Horton" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click>=8.1",
  "edsl @ git+https://github.com/expectedparrot/edsl.git",
  "typer>=0.23",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
katz = "katz.cli:app"
autokatz = "katz.autokatz:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/katz"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
